[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/48pt-theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/BattleScene.gd" type="Script" id=2]
[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=3]

[node name="BattleScene" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 800.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 1280.0
margin_bottom = 802.0

[node name="BattleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 54.0
theme = ExtResource( 3 )
text = "Battle"

[node name="Arena" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 1280.0
margin_bottom = 598.0
rect_min_size = Vector2( 1280, 540 )
size_flags_horizontal = 3

[node name="LeftArena" type="Panel" parent="Panel/MarginContainer/VBoxContainer/Arena"]
margin_right = 638.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/Arena/LeftArena"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Panel" parent="Panel/MarginContainer/VBoxContainer/Arena/LeftArena/GridContainer"]
margin_right = 317.0
margin_bottom = 268.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slot2" type="Panel" parent="Panel/MarginContainer/VBoxContainer/Arena/LeftArena/GridContainer"]
margin_left = 321.0
margin_right = 638.0
margin_bottom = 268.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slot3" type="Panel" parent="Panel/MarginContainer/VBoxContainer/Arena/LeftArena/GridContainer"]
margin_top = 272.0
margin_right = 317.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slot4" type="Panel" parent="Panel/MarginContainer/VBoxContainer/Arena/LeftArena/GridContainer"]
margin_left = 321.0
margin_top = 272.0
margin_right = 638.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightArena" type="Panel" parent="Panel/MarginContainer/VBoxContainer/Arena"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BattleInfo" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 602.0
margin_right = 1280.0
margin_bottom = 802.0
rect_min_size = Vector2( 0, 200 )

[node name="CommandPanel" type="Panel" parent="Panel/MarginContainer/VBoxContainer/BattleInfo"]
margin_right = 424.0
margin_bottom = 200.0
size_flags_horizontal = 3

[node name="ActionList" type="ItemList" parent="Panel/MarginContainer/VBoxContainer/BattleInfo/CommandPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerListPanel" type="Panel" parent="Panel/MarginContainer/VBoxContainer/BattleInfo"]
margin_left = 428.0
margin_right = 852.0
margin_bottom = 200.0
size_flags_horizontal = 3

[node name="PlayerList" type="ItemList" parent="Panel/MarginContainer/VBoxContainer/BattleInfo/PlayerListPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyList" type="Panel" parent="Panel/MarginContainer/VBoxContainer/BattleInfo"]
margin_left = 856.0
margin_right = 1280.0
margin_bottom = 200.0
size_flags_horizontal = 3
